:recycle: replace collector by toList